# pinhao

./: .gitignore  BinOpFormula_8h.html  BinOpFormula_8h__dep__incl.map  BinOpFormula_8h__dep__incl.md5  BinOpFormula_8h__incl.map  BinOpFormula_8h__incl.md5  BinOpFormula_8h_source.html  CFGBasicBlockStaticFeatures_8cpp.html  CFGBasicBlockStaticFeatures_8cpp__incl.map  CFGBasicBlockStaticFeatures_8cpp__incl.md5  CFGBasicBlockStaticFeatures_8cpp_source.html  CFGFunctionStaticFeatures_8cpp.html  CFGFunctionStaticFeatures_8cpp__incl.map  CFGFunctionStaticFeatures_8cpp__incl.md5  CFGFunctionStaticFeatures_8cpp_source.html  CFGModuleStaticFeatures_8cpp.html  CFGModuleStaticFeatures_8cpp__incl.map  CFGModuleStaticFeatures_8cpp__incl.md5  CFGModuleStaticFeatures_8cpp_source.html  CFGStaticFeaturesDiffPass_8cpp.html  CFGStaticFeaturesDiffPass_8cpp__incl.map  CFGStaticFeaturesDiffPass_8cpp__incl.md5  CFGStaticFeaturesDiffPass_8cpp_source.html  CFGStaticFeaturesGenPass_8cpp.html  CFGStaticFeaturesGenPass_8cpp__incl.map  CFGStaticFeaturesGenPass_8cpp__incl.md5  CFGStaticFeaturesGenPass_8cpp_source.html  CFGStaticFeaturesPass_8cpp.html  CFGStaticFeaturesPass_8cpp__incl.map  CFGStaticFeaturesPass_8cpp__incl.md5  CFGStaticFeaturesPass_8cpp_source.html  CMakeLists.txt  CandidateYAMLWrapper_8cpp.html  CandidateYAMLWrapper_8cpp__incl.map  CandidateYAMLWrapper_8cpp__incl.md5  CandidateYAMLWrapper_8cpp_source.html  Candidate_8cpp.html  Candidate_8cpp__incl.map  Candidate_8cpp__incl.md5  Candidate_8cpp_source.html  (+725 more)
cmake/: CompilerFlags.cmake  LinkModule.cmake
include/pinhao/: Initialization.h  InitializationRoutines.h  InitializeRoutines.h  PinhaoOptions.h
include/pinhao/Features/: CompositeFeatures.h  Feature.h  FeatureInfo.h  FeatureRegistry.h  FeatureSet.h  Features.h  MapFeature.h  MapVectorFeature.h  StringFeature.h  VectorFeature.h
include/pinhao/MachineLearning/GrammarEvolution/: BinOpFormula.h  Candidate.h  Evolution.h  FeatureFormula.h  Formula.h  Formulas.h  GEOSSimpleGrammarEvolution.h  GrammarEvolution.h  IfFormula.h  LitFormula.h  ParSimpleGrammarEvolution.h  SProfSimpleGrammarEvolution.h  SimpleGrammarEvolution.h
include/pinhao/Optimizer/: OptimizationInfo.h  OptimizationProperties.h  OptimizationSequence.h  OptimizationSet.h  Optimizations.h
include/pinhao/PerformanceAnalyser/: GEOSWrapper.h  PAPIWrapper.h  SProfWrapper.h
include/pinhao/Support/: FeatureYAMLWrapper.h  FormulaYAMLWrapper.h  Iterator.h  JITExecutor.h  KnowledgeBase.h  KnowledgeBaseYAMLWrapper.h  Random.h  SerialSet.h  SerialSetYAMLWrapper.h  Types.h  YAMLWrapper.h  YamlOptions.h  Yamlfy.h
lib/: CMakeLists.txt  InitializationRoutines.cpp  PinhaoOptions.cpp
lib/Features/: CFGBasicBlockStaticFeatures.cpp  CFGFunctionStaticFeatures.cpp  CFGModuleStaticFeatures.cpp  CMakeLists.txt  CompositeFeatures.cpp  Feature.cpp  FeatureInfo.cpp  FeatureRegistry.cpp  FeatureSet.cpp  Features.cpp  FunctionsGeneFeature.cpp  PAPIMultFeatures.cpp  StringFeature.cpp  VectorFeature.cpp
lib/FeaturesImpl/: CFGBasicBlockStaticFeatures.cpp  CFGFunctionStaticFeatures.cpp  CFGModuleStaticFeatures.cpp  CMakeLists.txt  FunctionStaticCostFeature.cpp  FunctionsGeneFeature.cpp  PAPIMultFeatures.cpp
lib/FeaturesImpl/GEOSFeatures/: CMakeLists.txt  GEOSBasicBlockFreqFeature.cpp  GEOSFeatures.cpp
lib/MachineLearning/: CMakeLists.txt
lib/MachineLearning/GrammarEvolution/: CMakeLists.txt  Candidate.cpp  CandidateYAMLWrapper.cpp  Formula.cpp  GEOSSimpleGrammarEvolution.cpp  LitFormula.cpp  ParSimpleGrammarEvolution.cpp  SProfSimpleGrammarEvolution.cpp  SimpleGrammarEvolution.cpp
lib/Optimizer/: CMakeLists.txt  OptimizationInfo.cpp  OptimizationProperties.cpp  OptimizationSequence.cpp  OptimizationSet.cpp  Optimizations.cpp
lib/PerformanceAnalyser/: CMakeLists.txt  GEOSWrapper.cpp  PAPIWrapper.cpp  SProfWrapper.cpp
lib/Support/: CMakeLists.txt  JITExecutor.cpp  Random.cpp  Types.cpp  YamlOptions.cpp
lib/Support/YAMLWrapper/: CMakeLists.txt  FeatureYAMLWrapper.cpp  FormulaYAMLWrapper.cpp  OptimizerYAMLWrapper.cpp  YAMLWrapper.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  enums_0.js  (+82 more)
tests/: CFGStaticFeaturesBenchmarkTest.sh.in  CFGStaticFeaturesTest.cpp  CMakeLists.txt  FeatureInfoTest.cpp  FeatureSetTest.cpp  FormulaTest.cpp  FormulaYAMLWrapperTest.cpp  FunctionStaticCostFeatureTest.cpp  GEOSFeaturesTest.cpp  GeneFeaturesBenchmarkTest.sh.in  GeneFeaturesTest.cpp  KeyIteratorTest.cpp  KnowledgeBaseTest.cpp  MainTest.cpp  ModuleReader.h  OptimizerTest.cpp  PAPIFeaturesTest.cpp  PAPIWrapperTest.cpp  RandomTest.cpp  SerialSetTest.cpp  YAMLTest.cpp  YamlOptionsGlobalTest.cpp  YamlOptionsTest.cpp
tools/: CMakeLists.txt
tools/OptLibraries/: CFGStaticFeaturesDiffPass.cpp  CFGStaticFeaturesGenPass.cpp  CFGStaticFeaturesPass.cpp  CMakeLists.txt  FunctionsGeneFeaturePass.cpp
tools/SimpleGrammarEvolution/: CMakeLists.txt  Main.cpp
